--- a/vpc-v2.config.yaml
+++ b/vpc-v2.config.yaml
@@ -50,9 +50,10 @@ dns_format: ${EnvironmentName}.${DnsDomain}
 enable_transit_vpc: true
 manage_ns_records: false
 
+endpoint_subnets: Compute
 endpoints:
   - s3
-  
+
 ip_blocks:
   public:
     - 0.0.0.0/0
