add public outbound

--- a/vpc-v2.config.yaml
+++ b/vpc-v2.config.yaml
@@ -44,6 +44,13 @@ acl_rules:
     protocol: -1 
     ips:
       - public
+  -
+    acl: public
+    number: 100
+    egress: true
+    protocol: -1
+    ips:
+      - public
       
 dns_format: ${EnvironmentName}.${DnsDomain}
 
