add manage ns record test

--- a/tests/manage_ns_records.test.yaml
+++ b/tests/manage_ns_records.test.yaml
@@ -1,6 +1,6 @@
 test_metadata:
   type: config
-  name: default
+  name: manage_ns_records
   description: test the upstream route53 inline component
 
 manage_ns_records: true
