--- a/tests/flowlogs.test.yaml
+++ b/tests/flowlogs.test.yaml
@@ -1,6 +1,6 @@
 test_metadata:
   type: config
-  name: VPC with flowlogs
+  name: flowlogs
   description: VPC with vpc flow logs enabled for ACCEPT traffic
 
 
