config option to not create a route53 hosted zone

--- a/vpc-v2.config.yaml
+++ b/vpc-v2.config.yaml
@@ -64,6 +64,8 @@ acl_rules:
 dns_format: ${EnvironmentName}.${DnsDomain}
 
 enable_transit_vpc: true
+
+create_hosted_zone: true
 manage_ns_records: false
 
 endpoint_subnets: Compute
