--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
   - 2.5
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install python3
 install:
   - gem install cfhighlander cfn-nag rspec
   - pip3 install --user cfn-lint
