--- a/tests/flowlogs.test.yaml
+++ b/tests/flowlogs.test.yaml
@@ -1,9 +1,7 @@
 test_metadata:
   type: config
   name: flowlogs
-  description: VPC with vpc flow logs enabled for ACCEPT traffic
+  description: VPC with vpc flow logs enabled with default config
 
 
-flowlogs: 
-  traffic_type: ACCEPT
-  log_retention: 14
+flowlogs: true
