provide ability to disable the dhcp option group so it could be created at a later stage with other detail that cnt be provided into the vpc component

--- a/vpc-v2.config.yaml
+++ b/vpc-v2.config.yaml
@@ -68,6 +68,7 @@ acl_rules:
 dns_format: ${EnvironmentName}.${DnsDomain}
 
 enable_transit_vpc: true
+enable_dhcp: true
 
 create_hosted_zone: true
 manage_ns_records: false
